# motionPath

./: CMakeLists.txt  Makefile  QUICK_FIX_CHECKLIST.md  UPGRADE_ANALYSIS_DETAILED.md  VS2022_COMPILATION_FIXES.md
cmake/: FindMaya.cmake
include/: BufferPath.h  DrawUtils.h  GlobalSettings.h  KeyClipboard.h  Keyframe.h  MotionPath.h  MotionPathDrawContext.h  MotionPathManager.h  PlatformFixes.h
python/tcMotionPath/: tcMotionPath.py
source/: BufferPath.cpp  CameraCache.cpp  ContextUtils.cpp  DrawUtils.cpp  GlobalSettings.cpp  KeyClipboard.cpp  Keyframe.cpp  MotionPath.cpp  MotionPathCmd.cpp  MotionPathDrawContext.cpp  MotionPathEditContext.cpp  MotionPathEditContextMenuWidget.cpp  MotionPathManager.cpp  MotionPathOverride.cpp  PluginMain.cpp  Vp2DrawUtils.cpp  animCurveUtils.cpp
